<resources>
    <string name="app_name">CHESS 1991</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="game_board_fragment_label">Game Board Fragment</string>
    <string name="leaderboard_fragment_label">Leader Board Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="play">Play</string>
    <string name="Leaderboard">Leaderboard</string>
    <string name="Customize">Customize</string>
    <string name="Options">Options</string>
    <string name="Logout">Log Out</string>
    <string name="Name">Chess 1991</string>
    <string name="Easy">EASY</string>
    <string name="Medium">MEDIUM</string>
    <string name="Hard">HARD</string>

    <string name="points">Points</string>
    <string name="waves">Waves</string>
    <string name="easySoft">Easy</string>
    <string name="mediumSoft">Medium</string>
    <string name="hardSoft">Hard</string>


    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="help">HELP</string>
    <string name="TutorialPlay">PLAY</string>
    <string name="nextButton">Next</string>
    <string name="backButton">Back</string>
    <string name="test">test</string>
    <string name="changed">changed</string>
    <string name="wave">Wave:</string>
    <string name="lives">Lives:</string>
    <string name="score">Score:</string>
    <string name="x">X</string>

    <string name="boardThemeOne">Board Theme 1:   </string>
    <string name="boardThemeTwo">Board Theme 2:</string>
    <string name="boardThemeThree">Board Theme 3:</string>
    <string name="userPieceAppearance">User Piece Appearance:</string>
</resources>