<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.myapplication.main_menu.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">
    </fragment>

    <fragment
        android:id="@+id/GameFragment"
        android:name="com.example.myapplication.game_board.GameBoardFragment"
        android:label="@string/game_board_fragment_label"
        tools:layout="@layout/game_main" />

    <fragment
        android:id="@+id/LeaderboardFragment"
        android:name="com.example.myapplication.leaderboard.LeaderBoardFragment"
        android:label="@string/leaderboard_fragment_label"
        tools:layout="@layout/leaderboard" />

</navigation>