<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    tools:context=".difficulty_menu.DifficultyMenu">

    <Button
        android:id="@+id/easyButton"
        android:layout_width="350dp"
        android:layout_height="85dp"
        android:layout_marginTop="50dp"
        android:text="@string/Easy"
        android:fontFamily="@font/jersey25"
        android:textSize="50sp"
        android:backgroundTint="@color/purple"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficultyText" />

    <Button
        android:id="@+id/mediumButton"
        android:layout_width="350dp"
        android:layout_height="85dp"
        android:layout_marginTop="25dp"
        android:text="@string/Medium"
        android:fontFamily="@font/jersey25"
        android:textSize="50sp"
        android:backgroundTint="@color/purple"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easyButton" />

    <Button
        android:id="@+id/hardButton"
        android:layout_width="350dp"
        android:layout_height="85dp"
        android:layout_marginTop="25dp"
        android:text="@string/Hard"
        android:fontFamily="@font/jersey25"
        android:textSize="50sp"
        android:backgroundTint="@color/purple"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mediumButton" />

    <Button
        android:id="@+id/helpButton"
        android:layout_width="250sp"
        android:layout_height="80sp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/purple"
        android:fontFamily="@font/jersey25"
        android:text="@string/help"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hardButton" />

    <Button
        android:id="@+id/difficultyBackButton"
        android:layout_width="53dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/jersey25"
        android:textSize="50sp"
        android:backgroundTint="@color/purple"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="30dp"
        app:icon="@android:drawable/ic_media_rew"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/difficultyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/play"
        android:fontFamily="@font/jersey25"
        android:textSize="90sp"
        android:textColor="@color/purple"
        android:elevation="10dp"
        android:shadowColor="@color/purple"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>