<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    tools:context=".difficulty_menu.DifficultyMenu">


    <Button
        android:id="@+id/pointsButton"
        android:layout_width="120sp"
        android:layout_height="60sp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/purple"
        android:text="@string/points"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mediumButton"
        app:layout_constraintStart_toEndOf="@+id/easyButton" />

    <Button
        android:id="@+id/wavesButton"
        android:layout_width="120sp"
        android:layout_height="60sp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/white"
        android:text="@string/waves"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/hardButton"
        app:layout_constraintStart_toEndOf="@+id/mediumButton" />

    <Button
        android:id="@+id/mediumButton"
        android:layout_width="120sp"
        android:layout_height="60sp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/white"
        android:text="@string/mediumSoft"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/pointsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/hardButton"
        android:layout_width="120sp"
        android:layout_height="60sp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/white"
        android:text="@string/hardSoft"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/wavesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/mediumButton" />

    <Button
        android:id="@+id/easyButton"
        android:layout_width="120sp"
        android:layout_height="60sp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/purple"
        android:text="@string/easySoft"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/pointsButton"
        app:layout_constraintEnd_toStartOf="@+id/mediumButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/leaderboardBackButton"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/purple"
        android:textSize="34sp"
        app:icon="@android:drawable/ic_media_rew"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/difficultyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Leaderboard"
        android:textColor="@color/purple"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginBottom="10dp"
        android:background="@color/purple"
        app:layout_constraintBottom_toTopOf="@+id/mediumButton" />

    <TextView
        android:id="@+id/pageText"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/circular_textview"
        android:gravity="center"
        android:text="1"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/leftButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/left_fade"
        android:clickable="false"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/pageText"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/rightButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/right_purple"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pageText" />

</androidx.constraintlayout.widget.ConstraintLayout>