<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/border"
    tools:context=".tutorial.Tutorial4">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/TutorialPlay"
        android:textColor="@color/purple"
        android:textSize="68sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/tutorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@id/tutorial"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_background"
        android:gravity="center_horizontal"
        android:text="\n\n \n Every few turns, a power up will spawn! A blue question mark indicates where!
\n\n Each power up represents a unique ability.
\n\n You’ll have to play the game to find out what they are!"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@id/nextButton"
        android:layout_width="173dp"
        android:layout_height="76dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/purple"
        android:text="@string/nextButton"
        android:textColor="@color/gray"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tutorial" />

    <Button
        android:id="@id/backButton"
        android:layout_width="158dp"
        android:layout_height="80dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/purple"
        android:text="@string/backButton"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/nextButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tutorial" />

    <Button
        android:id="@+id/backNavButton"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="test"
        android:textSize="34sp"
        app:icon="@android:drawable/ic_media_rew"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>