<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/border"
    tools:context=".tutorial.Tutorial2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/TutorialPlay"
        android:textColor="@color/purple"
        android:textSize="68sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/tutorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@id/tutorial"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_background"
        android:gravity="center_horizontal"
        android:text="\n\n At the bottom are the knight, bishop, and rook! \n \n \n \n \n \n \n Click on the appropriate piece to move like that piece."
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@id/nextButton"
        android:layout_width="158dp"
        android:layout_height="80dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/purple"
        android:text="@string/nextButton"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tutorial" />

    <Button
        android:id="@id/backButton"
        android:layout_width="158dp"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/purple"
        android:text="@string/backButton"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/nextButton"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tutorial" />

    <Button
        android:id="@+id/backNavButton"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="test"
        android:textSize="34sp"
        app:icon="@android:drawable/ic_delete"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="61dp"
        android:layout_height="64dp"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.43"
        app:srcCompat="@drawable/bishop" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="61dp"
        android:layout_height="64dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="@+id/tutorial"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.43"
        app:srcCompat="@drawable/rook" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="61dp"
        android:layout_height="64dp"
        android:layout_marginStart="48dp"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintStart_toStartOf="@+id/tutorial"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.427"
        app:srcCompat="@drawable/knight" />

</androidx.constraintlayout.widget.ConstraintLayout>